# mlops-zoomcamp

./: .flake8  .pre-commit-config.yaml  pyproject.toml
01-intro/src/: homework.ipynb
02-experiment-tracking/src/: homework.ipynb  hpo.py  register_model.py  train.py
