[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Luis Rodríguez"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scikit-learn = "^1.1.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
tqdm = "^4.64.0"
numpy = "^1.22.3"
statsmodels = "^0.13.2"
scipy = "^1.8.0"
plotnine = "^0.8.0"
mlflow = "^1.26.0"
pyarrow = "^8.0.0"
polars = "^0.13.37"
hyperopt = "^0.2.7"

[tool.poetry.dev-dependencies]
notebook = "^6.4.11"
jupyterlab = "^3.4.2"
jupyter-book = "^0.12.3"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.3.0"
ipython = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
